# nitorch-fastmath

./: .gitignore  README.md  setup.cfg  setup.py
docs/: mkdocs.yml  requirements.txt
docs/md/: index.md  install.md
docs/md/api/: batched.md  lie.md  linalg.md  qr.md  realtransforms.md  reduce.md  simplex.md  special.md  stochastic.md  sugar.md  sym.md  typing.md
nitorch_fastmath/: __init__.py  batched.py  lie.py  linalg.py  math.py  qr.py  realtransforms.py  reduce.py  simplex.py  special.py  stochastic.py  sugar.py  sym.py  sym_script.py  typing.py  utils.py
nitorch_fastmath/_impl/: batched.py  expm.py  logm.py  qr.py  realtransforms.py  realtransforms_autograd.py  realtransforms_from_fft.py  sym.py
nitorch_fastmath/_wrap/: realtransforms.py  realtransforms_cupy.py  realtransforms_from_fft.py  realtransforms_scipy.py
nitorch_fastmath/tests/: test_batched.py  test_lie.py  test_qr.py  test_realtransforms.py  test_realtransforms_gradcheck.py  utils.py
