[metadata]
name = nitorch-fastmath
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Math and linear algebra routines that are (sometimes) faster than PyTorch
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/nitorch/nitorch-fastmath

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    numpy
    scipy >= 1.0
    jitfields @ git+https://github.com/balbasty/jitfields.git

[options.extras_require]
cuda =
    cupy
    jitfields[cuda] @ git+https://github.com/balbasty/jitfields.git